--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,33 @@
 {
-    "manifest_version": 3,
-    "name": "YouTube Playlist Duration",
-    "version": "1.0",
-    "permissions": [
-      "activeTab"
-    ],
-    "background": {
-        "service_worker": "background.js"
-      },
-    "content_scripts": [
-      {
-        "matches": ["*://www.youtube.com/*"],
-        "js": ["contentScript.js"]
-      }
-    ],
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "icons/logo-16.png",
-        "48": "icons/logo-48.png",
-        "64": "icons/logo-64.png",
-        "128": "icons/logo-128.png"
-      }
+  "manifest_version": 3,
+  "name": "YouTube Study-Buddy Extension",
+  "version": "1.0",
+  "permissions": [
+    "scripting",
+    "activeTab",
+    "tabs"
+  ],
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "*://www.youtube.com/*"
+      ],
+      "js": [
+        "contentScript.js"
+      ],
+      "run_at": "document_end"
     }
+  ],
+  "icons": {
+    "16": "icons/logo-16.png",
+    "32": "icons/logo-32.png",
+    "48": "icons/logo-48.png",
+    "128": "icons/logo-128.png"
   }
-  
+}
