--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "YouTube Study-Buddy Extension",
+  "name": "YT Study-Buddy Extension",
   "version": "1.0",
   "permissions": ["scripting", "activeTab", "tabs"],
   "action": {
